--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>ServletFilterTutorial</display-name>
+  
+  <!-- Declaring a filter named logFilter -->
+  <filter>
+  <filter-name>logFilter</filter-name>
+  <filter-class>com.bdgolka.tutorial.servletfilter.LogFilter</filter-class>
+  </filter>
+  
+  <!-- 
+  Declare the path (of the page) will have the effect of logFilter
+  /*for all paths 
+  -->
+  <filter-mapping>
+  <filter-name>logFilter</filter-name>
+  <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
