--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,6 +17,16 @@
   <url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <filter>
+  <filter-name>log2Filter</filter-name>
+  <filter-class>com.bdgolka.tutorial.servletfilter.LogFilter.Log2Filter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  <filter-name>log2Filter</filter-name>
+  <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
